# artookit_nftSimple

./: README.md
nftSimpleProj/: .gitignore  build.gradle
nftSimpleProj/gradle/wrapper/: gradle-wrapper.properties
nftSimpleProj/nftSimple/: .gitignore  CMakeLists.txt  build.gradle
nftSimpleProj/nftSimple/src/main/jni/: nftSimple.cpp
